[package]
name = "faulty"
version = "0.1.0"
authors = ["sanchos <sanchos.1517@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2.5"
reqwest = { version = "0.10.9", features = ["json"] }
tokio = { version = "0.2", features = ["stream", "sync", "time", "macros"] }
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.8"
http = "0.2"
serde_json = "1.0"
futures = "0.3"
log = "0.4"
